--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Sviluppo di una pagina web - Blog Epicode</title>
 </head>
 
 <body>
     <header>
-
+        <img src="./assets/img/logo.svg" />
+        <h1>Epicode - Il Blog dei developers</h1>
     </header>
     <main>
         <section></section>
