feat: added nav

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
         <img src="./assets/img/logo.svg" />
         <h1>Epicode - Il Blog dei developers</h1>
     </header>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#article">Articoli</a></li>
+            <li><a href="#job">Job</a></li>
+        </ul>
+    </nav>
     <main>
         <section></section>
     </main>
