--- a/index.html
+++ b/index.html
@@ -113,7 +113,27 @@
         </section>
     </main>
     <footer>
+        <h3>Articoli Correlati</h3>
+        <ul>
+            <li>Validare il codice HTML</li>
+            <li>Categoria: develop</li>
+            <li>Data: 18-09-2020</li>
+        </ul>
+        <ul>
+            <li>Correggere la sintassi</li>
+            <li>Categoria: develop</li>
+            <li>Data: 16-09-2020</li>
+        </ul>
+        <ul>
+            <li>Meno Kb nella pagina</li>
+            <li>Categoria: ottimizzazione</li>
+            <li>Data: 30-09-2020</li>
+        </ul>
 
+        <p>Blog Epicode @2021</p>
+        <p>Testata online di Mario Rossi, registrata con prot. n.2013/2018 - via Luigi Einaudi 2 - Milano P.IVA 00112233
+        </p>
+        <p><a>info@epicode.school</a></p>
     </footer>
 </body>
 
