style: added some css's rules

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
 
         <h2>Come creare un template per i post</h2>
-        <h3>di <em>Mario Rossi</em> - <span class="underline">pubblicato il 25-10-2020</span></h3>
+        <h4>di <em>Mario Rossi</em> - <span class="underline">pubblicato il 25-10-2020</span></h4>
 
         <section id="article">
 
@@ -51,9 +51,11 @@
                 <li>L'applicazione di stili CSS é cresciuta negli anni fino a raggiungere la diffusione pressoché
                     totale.</li>
             </ul>
+
+            <h3>Diffusione dei CSS</h3>
             <table>
-                <caption>Diffusione dei CSS</caption>
-                <thead>
+
+                <thead class="thead-style">
 
                     <tr>
                         <th>Anno</th>
@@ -97,8 +99,11 @@
                 scopo.</p>
             <p>Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo di essere stati dei veri developers
                 come loro:</p>
-            <video src="https://youtu.be/Jqz-OyVQBJ8" controls="controls">Il tuo broswer non supporta HTML5</video>
 
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Jqz-OyVQBJ8"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <form>
                 <fieldset>
                     <legend>Vuoi rimanere aggiornato su altre novitá del blog? Iscriviti alla nostra newsletter:
@@ -112,7 +117,7 @@
 
         </section>
     </main>
-    <footer>
+    <footer id="job">
         <h3>Articoli Correlati</h3>
         <ul>
             <li>Validare il codice HTML</li>
@@ -130,10 +135,10 @@
             <li>Data: 30-09-2020</li>
         </ul>
 
-        <p>Blog Epicode @2021</p>
+        <a href="#">Blog Epicode @2021</a>
         <p>Testata online di Mario Rossi, registrata con prot. n.2013/2018 - via Luigi Einaudi 2 - Milano P.IVA 00112233
         </p>
-        <p><a>info@epicode.school</a></p>
+        <p><a href="mailto:info@epicode.school">info@epicode.school</a></p>
     </footer>
 </body>
 
